--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DoM</title>
+</head>
+<body>
+    <button>Hello</button>
 
+    <script>
+        console.log(document.title);
+        document.title = 'Changed';
+        console.log(document.title);
+
+        console.log(document.body.innerHTML);
+        document.querySelector('button')
+            .innerHTML = 'SANJU';
+
+        /*
+        document.body.innerHTML = 'hello';
+        document.title = 'Good Job!';
+        */
+
+    </script>
+</body>
+</html>
